// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Provided Currencies if currencies are provided in spreadsheet --> display this currencies 1`] = `
<select
  class="o-input o-available-currencies"
>
  <option
    value="0"
  >
    Custom
  </option>
  <option
    value="1"
  >
    3 decimal places / expression position after (ABC)
  </option>
  <option
    value="2"
  >
    4 decimal places / expression position before (DEF)
  </option>
  
</select>
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 1`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ CODE SYMBOL]",
  "#,##0.00[$ CODE SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$CODE SYMBOL]#,##0",
  "[$CODE SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 2`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ TEST SYMBOL]",
  "#,##0.00[$ TEST SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$TEST SYMBOL]#,##0",
  "[$TEST SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 3`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ CODE SYMBOL]",
  "#,##0.00[$ CODE SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$CODE SYMBOL]#,##0",
  "[$CODE SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 4`] = `
[
  "#,##0[$TEST]",
  "#,##0.00[$TEST]",
  "#,##0[$ CODE TEST]",
  "#,##0.00[$ CODE TEST]",
  "[$TEST]#,##0",
  "[$TEST]#,##0.00",
  "[$CODE TEST]#,##0",
  "[$CODE TEST]#,##0.00",
]
`;
